xserver-xorg-input-mouse (1:1.4.0-3) UNRELEASED; urgency=low

  * Add README.source, bump Standards-Version to 3.8.3.

 -- Julien Cristau <jcristau@debian.org>  Sat, 22 Aug 2009 22:58:56 +0200

xserver-xorg-input-mouse (1:1.4.0-2) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:22:01 +0100

xserver-xorg-input-mouse (1:1.4.0-1) experimental; urgency=low

  * New upstream release.
  * Run autoreconf on build.
  * Handle parallel builds.
  * Build-depend on xserver 1.6 rc1, automake, libtool and xutils-dev 1:7.4+4.
  * Add copyright notices for OS mouse code to debian/copyright (from
    upstream's COPYING).

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 21:53:06 +0100

xserver-xorg-input-mouse (1:1.3.0-2) experimental; urgency=low

  * Build against xserver 1.5 rc5.

 -- Julien Cristau <jcristau@debian.org>  Mon, 14 Jul 2008 01:56:30 +0200

xserver-xorg-input-mouse (1:1.3.0-1) unstable; urgency=low

  * New upstream release.
  * Drop patch added in 1:1.2.3-2, it's applied in this release.
  * Drop the XS- prefix from Vcs-* control fields.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.  Build-depend on
    dpkg-dev >= 1.14.17.

 -- Julien Cristau <jcristau@debian.org>  Fri, 30 May 2008 13:55:10 +0200

xserver-xorg-input-mouse (1:1.2.3-2) unstable; urgency=low

  * New patch from Peter Hutterer (from upstream bug#13144): don't flush
    buttons, release events can cause paste events.
  * Bump Standards-Version to 3.7.3.

 -- Julien Cristau <jcristau@debian.org>  Thu, 06 Dec 2007 18:44:31 +0100

xserver-xorg-input-mouse (1:1.2.3-1) unstable; urgency=low

  * New upstream version.

 -- Drew Parsons <dparsons@debian.org>  Mon, 29 Oct 2007 01:05:21 +1100

xserver-xorg-input-mouse (1:1.2.2-6) unstable; urgency=low
