@@ -20,7 +20,7 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	MAKEFLAGS += -j$(NUMJOBS)
 endif
 
-DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+DEB_HOST_ARCH_OS   ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
@@ -78,6 +78,10 @@ binary-arch: build install serverabi
 	dh_installdocs README
 	dh_installchangelogs ChangeLog
 	dh_install --sourcedir=debian/tmp --list-missing --exclude=mouse_drv.la --exclude=usr/share/man/man4
+ifeq (kfreebsd, $(DEB_HOST_ARCH_OS))
+	install -d -m 755 debian/xserver-xorg-input-mouse/usr/share/hal/fdi/policy/20thirdparty
+	install -m 644 debian/local/10-x11-mouse.fdi debian/xserver-xorg-input-mouse/usr/share/hal/fdi/policy/20thirdparty/
+endif
 	dh_installman
 	dh_link
 	dh_strip
